minor fix to scroll button, wasn't displaying well on ios

--- a/style.scss
+++ b/style.scss
@@ -428,14 +428,14 @@ footer {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   background-color: $alice;
   color: $indigoDye;
   border: none;
-  border-radius: 40%;
+  border-radius: 20%;
   text-align: center;
-  font-size: 18px;
+  font-size: 24px;
   cursor: pointer;
   display: none; /* Hidden by default */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
